--- a/protochain/package.json
+++ b/protochain/package.json
@@ -5,12 +5,32 @@
   "main": "index.js",
   "scripts": {
     "compile": "npx tsc",
-    "start": "node ./dist/blockchain.js"
+    "dev": "npx nodemon ./src/lib/blockchain.ts --watch './src/' -e ts",
+    "start": "node ./dist/blockchain.js",
+    "test": "jest",
+    "blockchain": "ts-node ./src/server/blockchainServer.ts --run",
+    "miner": "ts-node ./src/client/minerClient.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "axios": "^1.2.3",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
